--- a/ch10.md
+++ b/ch10.md
@@ -12,7 +12,7 @@
 
 Backbone允许你定义模型类，它们可以用于绑定视图（例如HTML表单）。当用户和UI交互时Backbone会跟踪模型的升级，反之亦然。它也能通过和服务器同步模型来帮助你，例如调用服务端REST处理器的适当方法。所以你最终会在前端实现业务逻辑，将你的服务器模型用于处理持久化数据。
 
-在服务端复用Backbone模型十分容易用Nashron完成，就像下面的例子所展示的那样。在我们开始之前，确保你通过阅读我的[Nashorn教程](ch3.md)熟悉了在Nashron引擎中编程JavaScript。
+在服务端复用Backbone模型十分易于用Nashron完成，就像下面的例子所展示的那样。在我们开始之前，确保你通过阅读我的[Nashorn教程](ch3.md)熟悉了在Nashron引擎中编写JavaScript。
 
 ## Java 模型
 
@@ -31,7 +31,7 @@ class Product {
 
 现在我们定义Backbone模型，作为Java Bean的对应。Backbone模型`Product`使用和Java Bean相同的数据结构，因为它是我们希望在Java服务器上持久存储的数据。
 
-Backbone模型也实现了业务逻辑：`getValueOfGoods`方法通过将`stock`于`price`相乘计算所有产品的总值。每次`stock`或`price`的变动都会使`valueOfGoods`重新计算。
+Backbone模型也实现了业务逻辑：`getValueOfGoods`方法通过将`stock`与`price`相乘计算所有产品的总值。每次`stock`或`price`的变动都会使`valueOfGoods`重新计算。
 
 ```js
 var Product = Backbone.Model.extend({
